<resources>
    <string name="app_name">productCatalog</string>
    <string name="mess_log">Respuesta recibida: %s</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="supplier">Supplier</string>
    <string name="shipping_cost">Shipping Cost</string>
    <string name="tFConnection">Error de conexión</string>
    <string name="tQFail">No se pudo conectar al servidor. ¿Desea reintentar?</string>
    <string name="tReintentar">Reintentar</string>
    <string name="tCancel">Cancelar</string>
    <string name="product_description">Imagen del producto</string>
    <string name="tIdRecibido">ID recibido %s</string>
    <string name="tvPrice">$%s</string>
    <string name="dPrice">Price</string>
    <string name="cost_shipping">Costo de envío: $</string>
    <string name="sign">$</string>
    <string name="description">Description</string>
    <string name="detalles_del_producto">Detalles del producto</string>
    <string name="productos">Productos</string>


</resources>